--- a/playbook/site.yml
+++ b/playbook/site.yml
@@ -2,25 +2,47 @@
     # This playbook deploys the whole application stack in this site.
 
 
-- name: configure and deploy the elasticsearch search engine application
+- name: Configure and deploy the elasticsearch search engine application
   hosts: elasticsearchservers
-  remote_user: david
   roles:
     - elasticsearch
   vars:
-    es_version: 7.8.0
     es_config:
       network.host: 0.0.0.0
       discovery.type: single-node
 
-- name: configure and deploy the kibana GUI interface application
+- name: Configure and deploy the kibana GUI interface application
   hosts: kibanaservers
-  remote_user: david
   roles:
     - kibana
 
-- name: configure and deploy the fluentd driver on all servers to route logs to elasticsearch
+- name: Configure and deploy the fluentd driver on all servers to route logs to elasticsearch
   hosts: all
-  remote_user: david
   roles:
     - fluentd
+
+- name: Configure rsyslog on all nodes for testing purposes
+  hosts: all
+  roles:
+    - rsyslog
+
+- name: This sets up an httpd webserver for testing purposes
+  hosts: web
+  tasks:
+  - name: Install apache packages 
+    yum:
+      name: httpd
+      state: present
+  - name: ensure httpd is running
+    service:
+      name: httpd 
+      state: started
+  - name: Open port 80 for http access
+    firewalld:
+      service: http
+      permanent: true
+      state: enabled
+  - name: Restart the firewalld service to load in the firewall changes
+    service: 
+      name: firewalld 
+      state: restarted
