--- a/playbook/roles/fluentd/tasks/install.yml
+++ b/playbook/roles/fluentd/tasks/install.yml
@@ -1,40 +1,25 @@
 ---
+- name: Add GDP key to rpm db
+  rpm_key:
+    state: present
+    key: https://packages.treasuredata.com/GPG-KEY-td-agent
 
-- name: Create fluentd group
-  group:
-    name: "{{ fluentd_group }}"
+- name: Add treasuredata yum repository
+  yum_repository:
+    name: treasuredata
+    description: "TreasureData yum repository for {{ fluentd_package_name }}"
+    baseurl: http://packages.treasuredata.com/4/redhat/$releasever/$basearch
+    gpgcheck: yes
+    gpgkey: https://packages.treasuredata.com/GPG-KEY-td-agent
+    enabled: true
     state: present
 
-- name: Create fluentd user
-  user:
-    name: "{{ fluentd_user }}"
-    group: "{{ fluentd_group }}"
-
-- name: Install required libs
-  apt:
-    name: "{{ item }}"
-    update_cache: yes
-  with_items: "{{ fluentd_required_libs }}"
-  become: yes
-  become_method: "sudo"
-
-- name: Install fluentd gem
-  gem:
-    name: fluentd
+- name: Install fluentd
+  yum:
+    name: "{{ fluentd_package_name }}"
     state: present
-    version: "{{ fluentd_version }}"
-    user_install: no
-  notify: restart fluentd
-  become: yes
-  become_method: "sudo"
 
-- name: Install fluentd plugin gems
-  gem:
-    name: "{{ item }}"
+- name: Install openssl
+  yum:
+    name: openssl
     state: present
-    user_install: no
-  with_items:
-    - "{{ fluentd_plugins }}"
-  notify: restart fluentd
-  become: yes
-  become_method: "sudo"
